# mentci

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  INTENTION.md  README.md  devshell.nix  flake.nix  manifest  mentci.code-workspace  skills.md  workspace.code-workspace
.beads/: PRIME.md  config.yaml
checks/: default.nix  scenario-mentci-lib-handshake.nix
docs/: architecture.md  dolt-workflows.md  workspace-manifest.md
reports/: 005-resume-state.md  008-nota-nexus-review.md  009-nota-nexus-second-review.md  011-code-sharing-and-deferred.md  012-nexus-vision.md  013-nexus-syntax-proposal.md  014-serde-refactor-review.md  015-architecture-landscape.md  016-tier-b-decisions.md  018-lojix-positioning.md  019-lojix-as-pillar.md  020-lojix-single-daemon.md  027-adversarial-review-of-026.md  028-doc-propagation-inventory.md  029-ra-chalk-polonius-structural-lessons.md  030-lojix-transition-plan.md  031-uncertainties-and-open-questions.md  033-record-catalogue-and-cascade-consolidated.md  059-nix-as-build-backend-and-macro-philosophy.md  061-intent-pattern-and-open-questions.md  062-intent-to-implementation-path.md  064-bootstrap-as-iterative-competence.md  065-criome-schema-design.md  066-architecture-md-audit.md  070-nexus-language-and-contract.md  072-multi-angle-audit-and-path-forward.md  074-portable-rkyv-discipline.md  076-corpus-trim-and-forward-agenda.md  077-nexus-and-signal.md  078-implementation-roadmap-from-external-research.md  079-relation-types-research.md  080-code-age-audit-2026-04-25.md  082-delimiter-set-rewrite.md  083-the-return-protocol.md  084-text-wire-research.md  085-session-handoff-2026-04-26.md  089-m0-implementation-plan-step-3-onwards.md  093-project-wide-style-review-plan.md  094-handoff-explicit.md  095-style-audit-2026-04-27.md  (+21 more)
schema/: nexus.schema  preflight-launch.nota.md  sema.schema
src/: client.rs  command.rs  configuration.rs  criome_bridge.rs  daemon.rs  error.rs  frame_codec.rs  harness_adapters.rs  harness_liveness.rs  harness_sessions.rs  introspection_bridge.rs  lib.rs  main.rs  preflight.rs  state.rs
tests/: client.rs  configuration.rs  criome_bridge.rs  frame_codec.rs  harness_adapters.rs  harness_liveness.rs  harness_sessions.rs  preflight.rs  state.rs
