[package]
name         = "mentci"
version      = "0.1.2"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/mentci"
description  = "Mentci daemon: programmable human approval surface over signal-mentci."

[features]
default = []
terminal-cell-runtime = ["dep:terminal-cell"]

[dependencies]
criome             = { git = "https://github.com/LiGoldragon/criome", branch = "main" }
kameo              = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main", default-features = false, features = ["macros", "tracing"] }
meta-signal-criome = { git = "https://github.com/LiGoldragon/meta-signal-criome", branch = "main" }
meta-signal-mentci = { git = "https://github.com/LiGoldragon/meta-signal-mentci", branch = "main" }
mentci-lib         = { git = "https://github.com/LiGoldragon/mentci-lib", branch = "main", features = ["nota-text"] }
nota-next          = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv               = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-criome      = { git = "https://github.com/LiGoldragon/signal-criome", branch = "main" }
signal-frame       = { git = "https://github.com/LiGoldragon/signal-frame", branch = "main" }
signal-introspect  = { git = "https://github.com/LiGoldragon/signal-introspect.git", branch = "main", features = ["nota-text"] }
signal-mentci      = { git = "https://github.com/LiGoldragon/signal-mentci", branch = "main", features = ["nota-text"] }
signal-persona     = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "main" }
terminal-cell      = { git = "https://github.com/LiGoldragon/terminal-cell", branch = "main", optional = true }
thiserror          = "2"
tokio              = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
